# ImageTrainingSummary-QuizGen

./: .gitignore  README.md  auth_db.py  db.py  helpers.py  llm.py  main.py  pdf_generator.py  prompt.txt  pyproject.toml  requirements.txt  users.db
templates/: app_page.html  community.html  index.html  summary.html  summary_page.html
